# automated-commenting-machine

./: .gitignore  Cargo.toml  README.md  foo.txt
src/: README.md  config.rs  config_loader.rs  generate_commit_message.rs  git.rs  git_commit_api.rs  img.rs  main.rs  send_api_request.rs
src/app_config/: config.rs
src/comment_handler/: comment.rs
src/git_handler/: git.rs  mod.rs  read_me_gen.rs
src/handlers/: comment.rs  commit.rs  mod.rs  prs.rs
src/img_handler/: base64_to_jpg.rs  code_summarizer.rs  img.rs  mod.rs  slideshow_handler.rs
src/test/: typescript-test.ts
