[package]
name = "automated-commenting-machine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.35.1", features = ["full"] }
inquire = "0.6.2"
anyhow = "1.0"
toml = "0.8.8"
serde = { version = "1.0.195", features = ["derive"] }
dirs = "5.0.1"
