[package]
name = "automated-commenting-machine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.6", features = ["derive"] }
mime_guess = "2.0"

serde = "1.0.195"
tokio = { version = "1.35.1", features = ["full"] }
inquire = "0.6.2"
anyhow = "1.0"
toml = "0.8.8"

dirs = "5.0.1"
reqwest = "0.11.23"
spinoff = "0.8.0"
which = "6.0.0"
async-openai = "0.18.0"
regex = "1.10.2"
serde_json = "1.0"
